2019年 6月 7日 金曜日 13時02分23秒 JST

--- a/contents/act07.yaml.erb
+++ b/contents/act07.yaml.erb
@@ -37,6 +37,6 @@ run:
   command: |-2
     #!/bin/sh
     python program.py
-    ls -1 *.png  2>/dev/null | awk '{print "show image " $1}'
+    ls -1 *.png  2>/dev/null | awk '{print "show image " $1}' > /cmd
 
 
