2019年 6月 7日 金曜日 14時00分05秒 JST

--- a/contents/act07.yaml.erb
+++ b/contents/act07.yaml.erb
@@ -17,7 +17,7 @@ files:
     name: program.py
     title: プログラム
     lang: python3
-    default:
+    default: |-2
       import numpy as np
       import matplotlib.pyplot as plt
 
