--- a/contents/act07.yaml.erb
+++ b/contents/act07.yaml.erb
@@ -37,6 +37,6 @@ run:
   command: |-2
     #!/bin/sh
     python program.py
-    ls -1 *.png *.jpg *.jpeg *.gif 2>/dev/null | awk '{print "show image " $1}' > /cmd
+    ls -1 *.png *.jpg *.jpeg *.gif 2>/dev/null | awk '{print "show image " $1 " " $1}' > /cmd
 
 
