--- a/contents/act07.yaml.erb
+++ b/contents/act07.yaml.erb
@@ -50,5 +50,5 @@ run:
     rm *.png
     python program.py
     #ls -1 *.png 2>/dev/null | awk '{print "show image " $1}' > /cmd
-    echo "show image `ls -1 *.png`"
+    echo "show image `ls -1 *.png | tr '\n' ' '`" > /cmd
 
