--- a/contents/act07.yaml.erb
+++ b/contents/act07.yaml.erb
@@ -47,8 +47,8 @@ run:
     memory: 300mb
   command: |-2
     #!/bin/sh
-    rm *.png
+    rm -f *.png
     python program.py
     #ls -1 *.png 2>/dev/null | awk '{print "show image " $1}' > /cmd
-    echo "show image `ls -1 *.png | tr '\n' ' '`" > /cmd
+    echo "show image `ls -1 *.png 2>/dev/null | tr '\n' ' '`" > /cmd
 
