2019年 6月 7日 金曜日 18時53分47秒 JST

--- a/contents/todo.md.erb
+++ b/contents/todo.md.erb
@@ -1,12 +1,11 @@
 # TODO
 
-* ActivityForm で Answer, Default を設定可能に
-* 複数の testcase は順次走らせるようにする
-* カスタマイズしやすいように hook point を作る
+* ActivityForm で Answer, Default を設定可能にする．
+* administration にまとめている管理機能を適切なページに分配する．
+* 採点補助のための機能を実装する．
+* Page, Activity の`*.erb` という拡張子は廃止する．すべてのファイルで ERB を有効にする．
+  その方がMarkdownエディタでプレビュー機能を活用できて便利．
 
 # Bug
 
-* testcase が存在しない場合，validtionが終了しない．
-  そもそもアイコンを消すべき
-* 同様に， run も必要に応じてアイコンを消すべき
-* ActivityForm が重たい．．． 
+* ActivityForm が重たいが現在の仕様上致し方がない． 
