2019年 6月 7日 金曜日 19時02分22秒 JST

--- a/contents/act07.yaml.erb
+++ b/contents/act07.yaml.erb
@@ -51,4 +51,5 @@ run:
     python program.py
     #ls -1 *.png 2>/dev/null | awk '{print "show image " $1}' > /cmd
     echo "show image `ls -1 *.png 2>/dev/null | tr '\n' ' '`" > /cmd
+    echo "show link `ls -1 *.png 2>/dev/null | tr '\n' ' '`" > /cmd
 
