--- a/contents/act07.yaml.erb
+++ b/contents/act07.yaml.erb
@@ -50,6 +50,6 @@ run:
     rm -f *.png
     python program.py
     #ls -1 *.png 2>/dev/null | awk '{print "show image " $1}' > /cmd
-    echo "show image `ls -1 *.png 2>/dev/null | tr '\n' ' '`" > /cmd
-    echo "show link `ls -1 *.png 2>/dev/null | tr '\n' ' '`" > /cmd
+    echo "show image `ls -1 *.png 2>/dev/null | tr '\n' ' '`" >> /cmd
+    echo "show link `ls -1 *.png 2>/dev/null | tr '\n' ' '`" >> /cmd
 
