--- a/contents/index.md.erb
+++ b/contents/index.md.erb
@@ -14,11 +14,12 @@
   * HTMLフォームによる課題を作成することができます．
     選択問題を作成したり，アンケートとしても活用できます．
   * プログラミング課題を作成することができます．
-  サーバーのサンドボックス環境で実行することができ，その結果をブラウザで即座に確認することができます．
+    サーバーのサンドボックス環境で実行することができ，
+    その結果をブラウザで即座に確認することができます．
     さらに，テストケースによる自動検証にも対応しています．
   * これらを任意に組み合わせた課題を作成することができます．
 
-  * ページは HTML 形式または Markdown 形式で記述でき，また，標準で MathJax と連携できます．
+* ページは HTML 形式または Markdown 形式で記述でき，また，標準で MathJax と連携できます．
 
 * 動的なコンテンツを [ERB](https://docs.ruby-lang.org/ja/latest/class/ERB.html) により作成できます．
   例えば，閲覧中のユーザーの情報を参照して，ユーザー毎に異なる挙動をするようなコンテンツを作成することができます．
