2019年 6月 7日 金曜日 21時12分27秒 JST

--- a/contents/index.md.erb
+++ b/contents/index.md.erb
@@ -26,6 +26,10 @@
 
 * ページには課題やほかのページを埋め込むことができます．
 
+* 講義のコンテンツデータは，WWW に(認証あり/認証付きで)公開されている Git リポジトリからインポートすることができます．
+  インポートした講義は，手動で最新のコンテンツに同期することができますし，
+  ハッシュキーを割り当てることで，WebHooks による自動同期も可能です．
+
 # マニュアル
 
 * [Manual](<%= embed_content('/manual') %>)
