2019年 6月 7日 金曜日 21時19分19秒 JST

--- a/contents/index.md.erb
+++ b/contents/index.md.erb
@@ -27,8 +27,11 @@
 * ページには課題やほかのページを埋め込むことができます．
 
 * 講義のコンテンツデータは，WWW に(認証なし/認証付きで)公開されている Git リポジトリからインポートすることができます．
-  インポートした講義は，手動で最新のコンテンツに同期することができますし，
-  ハッシュキーを割り当てることで，WebHooks による自動同期も可能です．
+  * インポートした講義は，手動で最新のコンテンツに同期することができます．
+  * ハッシュキーを割り当てることで，WebHooks による自動同期も可能です．
+    すなわち，GitHub や GitLab で講義データを管理すれば，
+    `git push origin master` とするだけで更新することができるだけでなく，
+    GitHub や GitLab がそのままコンテンツエディタにもなります．
 
 # マニュアル
 
