2019年 6月 7日 金曜日 21時20分48秒 JST

--- a/contents/todo.md.erb
+++ b/contents/todo.md.erb
@@ -6,6 +6,7 @@
 * Page, Activity の`*.erb` という拡張子は廃止し，すべてのファイルで ERB を有効にする．
   その方がMarkdownエディタでプレビュー機能を活用できて便利．
 * staffロールを廃止するか，権限を見直す．
+* Git の tag があれば，任意の tag の状態にもっていける機能を追加する．
 
 # Bug
 
