--- a/contents/index.md.erb
+++ b/contents/index.md.erb
@@ -31,7 +31,9 @@
   * ハッシュキーを割り当てることで，WebHooks による自動同期も可能です．
     すなわち，GitHub や GitLab で講義データを管理すれば，
     `git push origin master` とするだけで更新することができるだけでなく，
-    GitHub や GitLab がそのままコンテンツエディタにもなります．
+    GitHub や GitLab がそのままエディタになります．
+  * 講義データをほかの教員と共有することも推奨しています．
+    
 
 # マニュアル
 
