2019年 6月 7日 金曜日 21時26分49秒 JST

--- a/contents/index.md.erb
+++ b/contents/index.md.erb
@@ -30,7 +30,7 @@
   * インポートした講義は，手動で最新のコンテンツに同期することができます．
   * ハッシュキーを割り当てることで，WebHooks による自動同期も可能です．
     すなわち，GitHub や GitLab で講義データを管理すれば，
-    `git push origin master` とするだけで更新することができるだけでなく，
+    `git push origin master` とするだけで更新ができるだけでなく，
     GitHub や GitLab がそのままエディタになります．
   * 講義データをほかの教員と共有することも推奨しています．
     
