2019年 6月 7日 金曜日 21時31分47秒 JST

--- a/contents/index.md.erb
+++ b/contents/index.md.erb
@@ -1,8 +1,15 @@
 # <%= @lecture.title %>
 
 <%= @lecture.description %>
+  
+  
+<% if @language == 'Japanese' %>
+  <%= embed_content('/features') %>
+<% end %>
+<% if @language == 'English' %>
+  <%= embed_content('/features.eng') %>
+<% end %>
 
-<%= embed_content('/features') %>
 
 # マニュアル
 
