--- a/contents/index.md.erb
+++ b/contents/index.md.erb
@@ -4,10 +4,10 @@
   
   
 <% if @language == 'Japanese' %>
-  <%= embed_content('/features') %>
+<%= embed_content('/features') %>
 <% end %>
 <% if @language == 'English' %>
-  <%= embed_content('/features.eng') %>
+<%= embed_content('/features.en') %>
 <% end %>
 
 
