2019年 6月 7日 金曜日 21時36分42秒 JST

--- a/contents/index.md.erb
+++ b/contents/index.md.erb
@@ -13,6 +13,6 @@
 
 # マニュアル
 
-* [Manual](<%= embed_content('/manual') %>)
+* [Manual](<%= content_url('/manual') %>)
 
 <%= embed_content('todo') %>
