2019年 6月 7日 金曜日 21時37分34秒 JST

--- a/contents/index.md.erb
+++ b/contents/index.md.erb
@@ -10,9 +10,6 @@
 <%= embed_content('/features.en') %>
 <% end %>
 
-
-# マニュアル
-
-* [Manual](<%= content_url('/manual') %>)
+<%= embed_content('/manual') %>
 
 <%= embed_content('todo') %>
