2019年 6月 7日 金曜日 21時43分01秒 JST

--- a/contents/index.md.erb
+++ b/contents/index.md.erb
@@ -4,12 +4,15 @@
   
   
 <% if @language == 'Japanese' %>
+<%= embed_content('/concept') %>
 <%= embed_content('/features') %>
+<%= embed_content('/manual') %>
 <% end %>
 <% if @language == 'English' %>
+<%= embed_content('/concept.en') %>
 <%= embed_content('/features.en') %>
 <% end %>
 
-<%= embed_content('/manual') %>
+---
 
 <%= embed_content('todo') %>
