2019年 6月 7日 金曜日 21時48分08秒 JST

--- a/contents/manual/index.md.erb
+++ b/contents/manual/index.md.erb
@@ -1,9 +1,9 @@
 ## マニュアル
 
-* [Files](<%= content_url('/manual/files') %>)
-* [Contents](<%= content_url('/manual/contents/index') %>)
-    * [User](<%= content_url('/manual/contents/user') %>)
-    * [Global Variables](<%= content_url('/manual/contents/global_variables') %>)
-    * [Methods](<%= content_url('/manual/contents/methods') %>)
+* [ファイルの構成](<%= content_url('/manual/file') %>)
+* [コンテンツの作成](<%= content_url('/manual/contents/index') %>)
+    * [ユーザー](<%= content_url('/manual/contents/user') %>)
+    * [グローバル変数](<%= content_url('/manual/contents/global_variables') %>)
+    * [メソッド](<%= content_url('/manual/contents/methods') %>)
 
 
