2019年 6月 7日 金曜日 21時51分16秒 JST

--- a/contents/index.md.erb
+++ b/contents/index.md.erb
@@ -6,6 +6,7 @@
 <% if @language == 'Japanese' %>
 <%= embed_content('/concept') %>
 <%= embed_content('/features') %>
+<%= embed_content('/activity') %>
 <%= embed_content('/manual') %>
 <% end %>
 <% if @language == 'English' %>
