2019年 6月 7日 金曜日 21時51分57秒 JST

--- a/contents/activity.md.erb
+++ b/contents/activity.md.erb
@@ -1,3 +1,5 @@
+## アクテビティのデモ
+
 <%= embed_content('/act01', accordion: :close) %>
 <%= embed_content('/act02', accordion: :close) %>
 <%= embed_content('/act03', accordion: :close) %>
@@ -6,7 +8,6 @@
 <%= embed_content('/act06', accordion: :close) %>
 <%= embed_content('/act07', accordion: :close) %>
 
----
 
 <%= embed_content('/adhoc-python', accordion: :none, adhoc: { 'name' => 'foo', 'answer' => 'hello' }) %>
 
