2019年 6月 7日 金曜日 21時56分47秒 JST

--- a/contents/index.md.erb
+++ b/contents/index.md.erb
@@ -12,6 +12,7 @@
 <% if @language == 'English' %>
 <%= embed_content('/concept.en') %>
 <%= embed_content('/features.en') %>
+<%= embed_content('/activity.en') %>
 <% end %>
 
 ---
