--- a/contents/todo.md.erb
+++ b/contents/todo.md.erb
@@ -1,4 +1,6 @@
-# TODO
+## For developpers
+
+### TODO
 
 * ActivityForm で Answer, Default を設定可能にする．
 * administration にまとめている管理機能を適切なページに分配する．
@@ -8,6 +10,6 @@
 * staffロールを廃止するか，権限を見直す．
 * Git の tag があれば，任意の tag の状態にもっていける機能を追加する．
 
-# Bug
+### Bug
 
 * ActivityForm が重たいが現在の仕様上致し方がない． 
